--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: OpenSans Bold
+      fonts:
+        - asset: fonts/OpenSans-Bold.ttf
+    - family: OpenSans Regular
+      fonts:
+        - asset: fonts/OpenSans-Regular.ttf
+    - family: OpenSans Italic
+      fonts:
+        - asset: fonts/OpenSans-Italic.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
