--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.0
+  dartz: ^0.10.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^4.5.2
+
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^2.4.1
+  build_runner: ^2.4.0
+  hive_generator: ^2.0.1
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
