--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   uuid: ^4.5.2
+  shared_preferences: ^2.5.4
+  connectivity_plus: ^7.0.0
+  dio: ^5.4.1
+  dio_smart_retry: ^7.0.1
+  pretty_dio_logger: ^1.4.0
+  flutter_secure_storage: ^10.0.0
+  jwt_decoder: ^2.0.1
+  
+
+
+
 
   
 
