--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   flutter_secure_storage: ^10.0.0
   jwt_decoder: ^2.0.1
+  permission_handler: ^11.3.1
+  image_picker: ^1.1.2
+  
+
+
   
 
 
@@ -53,10 +58,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^3.1.0
+  flutter_launcher_icons: ^0.14.4
+  test_cov_console: ^0.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mocktail: ^1.0.4
   flutter_native_splash: ^2.4.1
   build_runner: ^2.4.0
   hive_generator: ^2.0.1
@@ -122,3 +130,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/icons/cineflixlogo.PNG"
+  min_sdk_android: 21
+  
